# automated-report-generator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  config.py  constants.py
src/agents/: __init__.py  research_agent.py  reviewer_agent.py  slide_agent.py  writer_agent.py
src/schemas/: __init__.py  report.py  research.py  review.py
src/services/: __init__.py  export_service.py  gemini_service.py  pdf_service.py  report_service.py  research_service.py  review_service.py  slide_service.py
src/utils/: __init__.py  file_utils.py  logger.py  text_utils.py  validators.py
src/workflow/: __init__.py  report_workflow.py
tests/: __init__.py  test_agents.py  test_config.py  test_export_service.py  test_gemini_service.py  test_report_service.py  test_research_service.py  test_review_service.py  test_slide_service.py  test_validators.py  test_workflow.py
