[project]
name = "automated-report-generator"
version = "1.0.0"
description = "Automated multi-agent report generator and slide deck creator"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "google-genai>=0.1.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",
    "httpx>=0.25.0",
    "duckduckgo-search==6.1.7",
    "python-dotenv>=1.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
