[project]
name = "automated-report-generator"
version = "1.0.0"
description = "Automated multi-agent report generator and slide deck creator"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.59.1",
    "google-genai==2.10.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.5.2",
    "python-pptx==1.0.2",
    "reportlab==5.0.0",
    "httpx==0.28.1",
    "ddgs==9.14.4",
    "python-dotenv==1.0.1"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pptx.*",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:reportlab.*"
]
